feat(SegmentedControl): check text rendered width

--- a/src/assets/styles/font.scss
+++ b/src/assets/styles/font.scss
@@ -1,3 +1,5 @@
+$font_family: "Spoqa Han Sans";
+
 body, th, td, input, select, textarea, button, div {
-  font-family: "Spoqa Han Sans";
+  font-family: $font_family
 }
