feat(TextInput): add text input

--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -12,10 +12,15 @@ $secondary: #e7ebee;  // grey04
 $secondary_dark: #d3d9de; // grey05
 $secondary_text: #4d5661; // grey09
 
+$dark_text: #303841;  // grey10
+$placeholder: #8b96a3; // grey07
+
 $hover_shadow: rgba(109, 120, 132, 0.36);  // grey08 0.36
 
 $disabled: #edf1f5;   // grey03
 $disabled_text: #b0b8c1; // grey06
+
+$error: #ff5d46;  // red01
 
 
 // Color Set START  
