--- a/src/components/Forms/TextInput.scss
+++ b/src/components/Forms/TextInput.scss
@@ -4,6 +4,15 @@ $component: #{$prefix}-text;
 
 .#{$component} {
   box-sizing: border-box;
+
+  & > input {
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    border: none;
+    outline: none;
+    text-align: inherit;
+  }
 }
 
 .#{$component}-primary {
@@ -12,13 +21,12 @@ $component: #{$prefix}-text;
   box-shadow: 0px 0px 0px 1px $secondary_dark;
 
   color: $dark_text;
-  &::placeholder {
+  & > input::placeholder {
     color: $placeholder;
   }
 
-  &:focus:focus-within:focus-visible {
-    border: none;
-    outline: none;
+  // &:focus:focus-within:focus-visible {
+  &:focus-within {
     box-shadow: 0px 0px 0px 2px $primary,
                 0px 4px 10px 0 $hover_shadow;
   }
@@ -31,9 +39,7 @@ $component: #{$prefix}-text;
 
 .#{$component}-primary-error {
   box-shadow: 0px 0px 0px 2px $error;
-  &:focus:focus-within:focus-visible {
-    border: none;
-    outline: none;
+  &:focus-within {
     box-shadow: 0px 0px 0px 2px $error,
                 0px 4px 10px 0 $hover_shadow;
   }
