--- a/src/components/Forms/Select.scss
+++ b/src/components/Forms/Select.scss
@@ -1,19 +1,25 @@
 @import "../../assets/styles/global.scss";
 
-$component: #{$prefix}-text;
+$component: #{$prefix}-select;
 
 .#{$component} {
   display: flex;
   box-sizing: border-box;
 
-  & > input {
+  & > select {
     width: 100%;
     height: 100%;
-    background-color: transparent;
     border: none;
     outline: none;
     text-align: inherit;
     font-size: inherit;
+
+    background-color: transparent;
+    background-repeat: no-repeat;
+
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
   }
 }
 
@@ -49,30 +55,38 @@ $component: #{$prefix}-text;
 .#{$component}-xlg {
   min-width: 120px;
   height: 64px;
-  padding: 20px 24px;
   font-size: 16px;
+  & > select {
+    padding: 20px 24px;
+    padding-right: 64px;
+    background-position: center right 20px;
+  }
 }
 
 .#{$component}-lg {
   min-width: 90px;
   height: 42px;
-  padding: 9px 20px;
   font-size: 16px;
+  & > select {
+    padding: 9px 20px;
+    padding-right: 42px;
+    background-position: center right 9px;
+  }
 }
 
 .#{$component}-md {
   min-width: 80px;
   height: 34px;
-  padding: 7px 18px;
   font-size: 14px;
+  & > select {
+    padding: 7px 18px;
+    padding-right: 34px;
+    background-position: center right 7px;
+  }
 }
 
 @mixin img-by-size($size, $outside, $inside) {
-  .#{$component}-#{$size}-startimg {
-    margin-left: #{$outside}px;
-    margin-right: #{$inside}px;
-  }
-  .#{$component}-#{$size}-endimg {
+  .#{$component}-#{$size}-icon {
     margin-left: #{$inside}px;
     margin-right: #{$outside}px;
   }
