feat(Dropdown): add dropdown

--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -11,6 +11,7 @@ $primary_text: $white; // white
 $secondary: #e7ebee;  // grey04
 $secondary_dark: #d3d9de; // grey05
 $secondary_text: #4d5661; // grey09
+$secondary_hover: #f3f6f8; // grey02
 
 $dark_text: #303841;  // grey10
 $placeholder: #8b96a3; // grey07
