--- a/src/components/Menu/Dropdown/Dropdown.scss
+++ b/src/components/Menu/Dropdown/Dropdown.scss
@@ -10,6 +10,8 @@ $component: #{$prefix}-dropdown;
   box-shadow: 0 1px 8px 0 $hover_shadow;
   border-radius: 4px;
   border: 1px solid $secondary_dark;
+
+  color: $dark_text;
 }
 
 .#{$component}-lg {
@@ -29,6 +31,12 @@ $component: #{$prefix}-dropdown;
   }
 }
 
+.#{$component}-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .#{$component}-item-lg {
   font-size: 16px;
   padding: 12px 24px;
@@ -37,6 +45,14 @@ $component: #{$prefix}-dropdown;
 .#{$component}-item-md {
   font-size: 14px;
   padding: 6px 24px;
+}
+
+.#{$component}-item-startimg {
+  margin-right: 16px;
+}
+
+.#{$component}-item-endimg {
+  margin-left: 16px;
 }
 
 .#{$component}-divider {
