--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -10,9 +10,7 @@ $component: #{$prefix}-button;
   outline: none;
   transition: background-color 0.3s, color 0.3s ease, border-color 0.3s ease;
   line-height: 1.34em;
-  img {
-    vertical-align: middle;
-  }
+
   &:hover {
     text-decoration: none;
   }
@@ -20,55 +18,55 @@ $component: #{$prefix}-button;
     cursor: not-allowed;
   }
 
-  .#{$component}-startimg {
+  .#{$component}-starticon {
     margin-left: 0;
   }
-  .#{$component}-endimg {
+  .#{$component}-endicon {
     margin-right: 0;
   }
 }
 
 // By Sizes
-.#{$component}-xlg {
+.#{$component}-size-xlg {
   min-width: 120px;
   height: 60px;
   border-radius: 10px;
   padding: 16px 20px;
   font-size: 18px;
-  img {
+  svg {
     margin: 0 8px;
   }
 }
     
-.#{$component}-lg {
+.#{$component}-size-lg {
   min-width: 100px;
   height: 42px;
   border-radius: 21px;
   padding: 10px 20px;
   font-size: 16px;
-  img {
+  svg {
     margin: 0 8px;
   }
 }
 
-.#{$component}-md {
+.#{$component}-size-md {
   min-width: 90px;
   height: 34px;
   border-radius: 17px;
   padding: 7px 18px;
   font-size: 14px;
-  img {
+  svg {
     margin: 0 6px;
   }
 }
     
-.#{$component}-sm {
+.#{$component}-size-sm {
   min-width: 70px;
   height: 30px;
   border-radius: 15px;
   padding: 5px 16px;
   font-size: 12px;
-  img {
+  svg {
     margin: 0 6px;
   }
 }
@@ -76,6 +74,9 @@ $component: #{$prefix}-button;
 .#{$component}-primary {
   background-color: $primary;
   color: $primary_text;
+  svg {
+    fill: $primary_text;
+  }
   &:hover {
     background-color: $primary_dark;
   }
