feat(style): add color, size, spzcing semantic definitions

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -1,2 +1,7 @@
 @import "font.scss";
 @import "variables.scss";
+
+// new
+@import "color/semantic.scss";
+@import "spacing.scss";
+@import "size.scss";
