--- a/docs/styles/global.scss
+++ b/docs/styles/global.scss
@@ -1,2 +1,9 @@
+@import "tailwind";
+
 @import "font.scss";
 @import "variables.scss";
+
+// new
+@import "color/semantic.scss";
+@import "spacing.scss";
+@import "size.scss";
