chore: tailwind.css 삭제 후 global.scss에 적용

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -1,9 +1,6 @@
-@import "tailwind";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 @import "font.scss";
 @import "variables.scss";
-
-// new
-@import "color/semantic.scss";
-@import "spacing.scss";
-@import "size.scss";
