feat: width, responsive, block 추가

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -15,7 +15,7 @@ $component: #{$prefix}-button;
   }
 }
 
-// By Sizes
+// By Sizes(px)
 .#{$component}-xlg {
   @apply px-7 h-11;
   min-width: 120px;
@@ -76,6 +76,24 @@ $component: #{$prefix}-button;
   }
 }
 
+// By Sizes(rem)
+.#{$component}-responsive-xlg {
+  @apply h-r11;
+}
+
+.#{$component}-responsive-lg {
+  @apply h-r9;
+}
+
+.#{$component}-responsive-md {
+  @apply h-r8;
+}
+
+.#{$component}-responsive-sm {
+  @apply px-4 h-r7;
+}
+
+// By variant
 .#{$component}-primary {
   @apply bg-button_primary text-text_inverse;
   svg {
@@ -183,7 +201,7 @@ $component: #{$prefix}-button;
 }
 
 .#{$component}-block {
-  @apply w-full min-w-0;
+  @apply min-w-0 block;
   & + & {
     @apply ml-0 mt-4;
   }
