--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -15,7 +15,7 @@ $component: #{$prefix}-button;
   }
 
   & > .#{$component}-inner {
-    @apply h-full inline-flex items-center;
+    @apply inline-flex h-full items-center;
     line-height: 100%;
   }
 }
