--- a/docs/styles/global.scss
+++ b/docs/styles/global.scss
@@ -1,9 +1,6 @@
-@import "tailwind";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 @import "font.scss";
 @import "variables.scss";
-
-// new
-@import "color/semantic.scss";
-@import "spacing.scss";
-@import "size.scss";
