--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -22,7 +22,7 @@ $component: #{$prefix}-button;
 
 // By Sizes(px)
 .#{$component}-xl {
-  @apply px-spacing_08 h-size_08;
+  @apply px-spacing_08 h-xl;
   min-width: 120px;
   border-radius: 8px;
   font-size: 18px;
@@ -33,10 +33,18 @@ $component: #{$prefix}-button;
   & .#{$component}-righticon {
     @apply w-icon_md h-icon_md ml-spacing_04;
   }
+
+  &.#{$component}-icon {
+    @apply w-xl min-w-size_0 p-spacing_0 m-spacing_0;
+
+    svg {
+      @apply w-icon_md h-icon_md;
+    }
+  }
 }
 
 .#{$component}-lg {
-  @apply px-spacing_06 h-size_06;
+  @apply px-spacing_06 h-lg;
   min-width: 90px;
   border-radius: 8px;
   font-size: 16px;
@@ -47,10 +55,18 @@ $component: #{$prefix}-button;
   & .#{$component}-righticon {
     @apply w-icon_md h-icon_md ml-spacing_04;
   }
+
+  &.#{$component}-icon {
+    @apply w-lg min-w-size_0 p-spacing_0 m-spacing_0;
+
+    svg {
+      @apply w-icon_md h-icon_md;
+    }
+  }
 }
 
 .#{$component}-md {
-  @apply px-spacing_05 h-size_05;
+  @apply px-spacing_05 h-md;
   min-width: 80px;
   &[data-width] {
     min-width: 0px;
@@ -64,10 +80,18 @@ $component: #{$prefix}-button;
   & .#{$component}-righticon {
     @apply w-icon_sm h-icon_sm ml-spacing_03;
   }
+
+  &.#{$component}-icon {
+    @apply w-md min-w-size_0 p-spacing_0 m-spacing_0;
+
+    svg {
+      @apply w-icon_sm h-icon_sm;
+    }
+  }
 }
 
 .#{$component}-sm {
-  @apply px-spacing_04 h-size_04;
+  @apply px-spacing_04 h-sm;
   min-width: 56px;
   border-radius: 6px;
   font-size: 13px;
@@ -77,10 +101,18 @@ $component: #{$prefix}-button;
   }
 
   & .#{$component}-lefticon {
-    @apply w-icon_xs h-icon_xs mr-spacing_03;
+    @apply w-icon_xs h-icon_xs mr-spacing_02;
   }
   & .#{$component}-righticon {
-    @apply w-icon_xs h-icon_xs ml-spacing_03;
+    @apply w-icon_xs h-icon_xs ml-spacing_02;
+  }
+
+  &.#{$component}-icon {
+    @apply w-sm min-w-size_0 p-spacing_0 m-spacing_0;
+
+    svg {
+      @apply w-icon_xs h-icon_xs;
+    }
   }
 }
 
@@ -104,6 +136,7 @@ $component: #{$prefix}-button;
 // By variant
 .#{$component}-primary {
   @apply bg-button_primary text-text_inverse;
+
   svg {
     @apply fill-background;
   }
@@ -123,7 +156,8 @@ $component: #{$prefix}-button;
 }
 
 .#{$component}-secondary {
-  @apply bg-button_secondary text-text01;
+  @apply bg-button_secondary text-text_01;
+
   &:hover {
     @apply shadow-shadow_hover;
   }
@@ -143,12 +177,17 @@ $component: #{$prefix}-button;
   }
   &:hover {
     @apply bg-hover_tertiary_button text-text_inverse;
+
     svg {
       @apply fill-background;
     }
   }
   &:active {
     @apply bg-active_tertiary_button border-active_tertiary_button text-text_inverse;
+
+    svg {
+      @apply fill-background;
+    }
   }
   &:disabled {
     @apply bg-button_disabled text-text_disabled border-none;
@@ -157,7 +196,7 @@ $component: #{$prefix}-button;
 }
 
 .#{$component}-ghost {
-  @apply text-text01;
+  @apply text-text_01;
   svg {
     @apply fill-icon01;
   }
@@ -189,6 +228,7 @@ $component: #{$prefix}-button;
 
 .#{$component}-danger_primary {
   @apply bg-danger text-text_inverse;
+
   svg {
     @apply fill-background;
   }
@@ -211,19 +251,20 @@ $component: #{$prefix}-button;
   }
   &:hover {
     @apply bg-hover_danger_tertiary_button text-text_inverse;
+
     svg {
       @apply fill-background;
     }
   }
   &:active {
     @apply bg-active_danger_tertiary_button border-active_danger_tertiary_button text-text_inverse;
+
+    svg {
+      @apply fill-background;
+    }
   }
   &:disabled {
     @apply bg-button_disabled text-text_disabled border-none;
     box-shadow: none;
   }
-}
-
-.#{$component}-icon {
-  @apply min-w-size_0 p-spacing_0 m-spacing_0 w-size_05;
 }
