chore: change default font

--- a/src/assets/styles/font.scss
+++ b/src/assets/styles/font.scss
@@ -1,6 +1,6 @@
 @import '../styles/color/fontColors.scss';
 
-$font_family: 'Spoqa Han Sans';
+$font_family: 'Spoqa Han Sans Neo';
 
 .font {
   letter-spacing: -0.5px;
