--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,6 +1,8 @@
 @import '../../assets/styles/global.scss';
 
 $component: #{$prefix}-button;
+$variants: 'primary', 'secondary', 'danger_primary', 'ghost', 'tertiary',
+  'danger_tertiary';
 
 .#{$component} {
   @apply cursor-pointer font-bold outline-none transition duration-200 ease-linear relative;
@@ -273,35 +275,44 @@ $component: #{$prefix}-button;
   }
 }
 
-.#{$component}-loading {
-  color: transparent;
-  &:before {
-    position: absolute;
-    content: '';
-    top: 50%;
-    left: 50%;
-    margin: -0.85em 0 0 -0.85em;
-    width: 1.7em;
-    height: 1.7em;
-    border-radius: 500rem;
-    border: 0.2em solid rgba(36, 41, 45, 0.18);
-  }
+%loading-circle {
+  position: absolute;
+  content: '';
+  top: 50%;
+  left: 50%;
+  margin: -0.85em 0 0 -0.85em; // top50%, left50일때 요소를 중앙에 위치시키기 위함. -width/2 0 0 -height/2
+  width: 1.7em;
+  height: 1.7em;
+  border-radius: 50%;
+  border: 0.2em solid rgba(36, 41, 45, 0.18);
+}
 
-  &:after {
-    position: absolute;
-    content: '';
-    top: 50%;
-    left: 50%;
-    margin: -0.85em 0 0 -0.85em;
-    width: 1.7em;
-    height: 1.7em;
-    border-radius: 500rem;
-    border-style: solid;
-    border-width: 0.2em;
-    box-shadow: 0 0 0 1px transparent;
-    animation: button-spin 0.6s linear;
-    animation-iteration-count: infinite;
-    border-color: #fff transparent transparent;
+@each $variant in $variants {
+  .#{$component}-#{$variant}-loading {
+    color: transparent !important;
+    &:before {
+      @extend %loading-circle;
+    }
+    &:after {
+      @extend %loading-circle;
+      border-style: solid;
+      border-width: 0.2em;
+      box-shadow: 0 0 0 1px transparent;
+      animation: button-spin 0.6s linear;
+      animation-iteration-count: infinite;
+      @if (
+        $variant ==
+          'primary' or
+          $variant ==
+          'danger_primary' or
+          $variant ==
+          'secondary'
+      ) {
+        border-color: #fff transparent transparent;
+      } @else {
+        border-color: grey transparent transparent;
+      }
+    }
   }
 }
 
