--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -297,7 +297,7 @@ $variants: 'primary', 'secondary', 'danger_primary', 'ghost', 'tertiary',
       border: 0.2em solid rgba(36, 41, 45, 0.18);
     }
     &:after {
-      //moving spinner
+      //spinner wheel
       @extend %loading-spinner;
       box-shadow: 0 0 0 1px transparent;
       animation: button-spin 0.6s linear;
