improvement: svg fill - transparent 설정

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -290,7 +290,10 @@ $variants: 'primary', 'secondary', 'danger_primary', 'ghost', 'tertiary',
 
 @each $variant in $variants {
   .#{$component}-#{$variant}-loading {
-    color: transparent !important;
+    color: transparent;
+    & > span > svg {
+      fill: transparent;
+    }
     &:before {
       //spinner background
       @extend %loading-spinner;
